syntax = "proto2";

package emulator_features;

// Must match emulator's featurecontrol defs.

enum Feature {
    GLPipeChecksum = 0;
    GrallocSync = 1;
    EncryptUserData = 2;
    IntelPerformanceMonitoringUnit = 3;
    GLAsyncSwap = 4;
    GLDMA = 5;
    GLDMA2 = 30;
    GLDirectMem = 33;
    GLESDynamicVersion = 6;

    // Forced renderer enums
    ForceANGLE = 7;
    ForceSwiftshader = 8;

    // Speculative / for testing robustness of
    // mapping feature names between emulator
    // and protobuf.
    HAXM = 9;
    AMDOpenGLDriver = 10;
    MesaDRI = 11;
    HVF = 12;

    Wifi = 13;

    PlayStoreImage = 14;

    LogcatPipe = 15;

    HYPERV = 16;
    KVM = 17;

    FastSnapshotV1 = 18;

    ScreenRecording = 19;

    VirtualScene = 20;

    IgnoreHostOpenGLErrors = 21;

    GenericSnapshotsUI = 22;

    AllowSnapshotMigration = 23;

    WindowsOnDemandSnapshotLoad = 24;

    WindowsHypervisorPlatform = 25;

    KernelDeviceTreeBlobSupport = 26;

    LocationUiV2 = 27;

    SnapshotAdb = 28;

    RefCountPipe = 29;

    HostComposition = 31;

    WifiConfigurable = 32;

    VideoPlayback = 34;

    VirtioInput = 35;

    MultiDisplay = 36;

    CarVHalTable = 43;

    DynamicPartition = 44;

    DynamicMediaProfile = 45;

    YUV420888toNV21 = 46;

    YUVCache = 47;

    KeycodeForwarding = 48;

    VirtioGpuNext = 49;

    Mac80211hwsimUserspaceManaged = 50;

    HasSharedSlotsHostMemoryAllocator = 51;

    CarVhalReplay = 52;

    HardwareDecoder = 53;

    VirtioWifi = 54;

    CarRotary = 55;

    ModemSimulator = 56;

    TvRemote = 57;

    VirtioMouse = 58;

    VirtconsoleLogcat = 59;

    Minigbm = 60;

    GnssGrpcV1 = 61;

    DeviceSkinOverlay = 62;
    // Emulated bluetooth stack
    BluetoothEmulation = 63;

    DeviceStateOnBoot = 64;

    HWCMultiConfigs = 65;
}
